<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/mainframe"
	android:layout_height="fill_parent"
	android:layout_width="fill_parent"
	android:clipChildren="false">

<!-- Top Level Linear Layout -->
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#99BBE8">
    
    <!-- Top Bar -->
    <LinearLayout
        android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:background="@drawable/header_gradient_bg">

        <ImageView
            android:id="@+id/ciscoLogo"
            android:src="@drawable/cisco_logo_small"
            android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:paddingTop="15dip"
    		android:paddingLeft="8dip">
        	</ImageView>
        
	    <!-- Start/Stop Lisp Process Checkbox -->
	    <LinearLayout
	        android:orientation="horizontal"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:paddingRight="4dip"
	    	android:gravity="right">
	
	        <TextView
	            android:text="@string/lispRunning"
	            android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:textColor="#FFFFFF" android:id="@+id/startStopCheckboxLabel">
	        	</TextView>
	        
	        <CheckBox
	            android:id="@+id/startStopCheckbox"
	            android:text=""
	            android:paddingLeft="2dip"
	        	android:layout_width="wrap_content"
	        	android:layout_height="wrap_content">
	        	</CheckBox>
	        	
	    </LinearLayout>
	    
	</LinearLayout>
	
    <!-- Separator -->
    <LinearLayout
		android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="3px"
    	android:background="#15428B">
    	</LinearLayout>
	
    <LinearLayout
		android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="1px"
    	android:background="#4E78B1">
    	</LinearLayout>
    	
    <!-- Table of Menu Buttons -->
    <LinearLayout
        android:id="@+id/tableLayout1"
        android:orientation="vertical"
    	android:layout_height="wrap_content"
    	android:layout_width="match_parent"
    	android:paddingLeft="4dip"
    	android:paddingRight="4dip"
    	android:paddingTop="6dip"
    	android:paddingBottom="6dip">
    	
        <LinearLayout
        	android:id="@+id/tableRow1"
        	android:orientation="horizontal"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:paddingTop="8dip"
        	android:layout_gravity="center_horizontal">
            	
            <Button
                android:id="@+id/showConfButton"
                android:text="Show Config"
                android:background="@drawable/generic_button"
            	android:layout_width="140dip"
            	android:layout_height="wrap_content"
            	android:layout_marginRight="4dip">
            	</Button>
            
            <Button
                android:id="@+id/pingButton"
                android:text="Ping"
                android:background="@drawable/generic_button"
            	android:layout_height="wrap_content"
            	android:layout_width="140dip"
            	android:layout_marginLeft="4dip">
            	</Button>
            	
        </LinearLayout>

        <LinearLayout
        	android:id="@+id/tableRow2"
        	android:orientation="horizontal"
        	android:layout_height="wrap_content"
        	android:layout_width="wrap_content"
        	android:paddingTop="8dip"
        	android:layout_gravity="center_horizontal">
        	
            <Button
            	android:id="@+id/showCacheButton"
            	android:text="@string/showMapCacheString"
            	android:background="@drawable/generic_button"
            	android:layout_height="wrap_content"
            	android:layout_width="140dip"
            	android:layout_marginRight="4dip">
            	</Button>
            	
            <Button
                android:id="@+id/showClearCacheButton"
                android:text="@string/showClearCacheString"
                android:background="@drawable/generic_button"
            	android:layout_width="140dip"
            	android:layout_height="wrap_content"
            	android:layout_marginLeft="4dip">
            	</Button>	
            	
        </LinearLayout>

    	<LinearLayout
    		android:id="@+id/tableRow3"
    		android:orientation="horizontal"
    		android:layout_height="wrap_content"
    		android:layout_width="wrap_content"
    		android:paddingTop="8dip"
    		android:layout_gravity="center_horizontal">
    		
			<Button
			    android:id="@+id/showDataCacheButton"
			    android:text="@string/showDataCacheString"
			    android:background="@drawable/generic_button"
				android:layout_width="140dip"
				android:layout_height="wrap_content"
				android:layout_marginRight="4dip" android:enabled="false" android:visibility="gone">
				</Button>
				
            <Button
                android:id="@+id/showLogButton"
                android:text="@string/showLogString"
                android:background="@drawable/generic_button"
            	android:layout_width="140dip"
            	android:layout_height="wrap_content"
            	android:layout_marginLeft="4dip">
            	</Button>
            		    		
    	</LinearLayout>
    	
    </LinearLayout>

    <!-- Separator -->
    <LinearLayout
		android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="1px"
    	android:background="#4E78B1"
    	android:layout_marginTop="8dip">
    	</LinearLayout>
    
	<LinearLayout
		android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="3px"
    	android:background="#15428B">
    	</LinearLayout>

    <!-- Info scroll view -->
    <ScrollView
        android:id="@+id/scrollView1"
    	android:layout_height="wrap_content"
    	android:layout_width="match_parent"
    	android:background="@drawable/info_text_gradient_bg">
    	
        <LinearLayout
    		android:id="@+id/scrollViewLinearLayout"
    		android:orientation="vertical"
    		android:layout_height="wrap_content"
    		android:layout_width="match_parent"
    		android:paddingTop="6dip"
    		android:paddingLeft="6dip"
    		android:paddingRight="6dip">
	        
			<Button
				android:id="@+id/updateConfButton"
				android:text="@string/updateConfString"
				android:background="@drawable/generic_button"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">
				</Button>
            
	        <TextView
	        	android:id="@+id/infoView"
	        	android:text="TextView"
	        	android:layout_width="match_parent"
	        	android:layout_height="match_parent"
	        	android:paddingLeft="6dip"
	        	android:layout_marginTop="8dip"
	        	android:typeface="monospace"
	        	android:textSize="11sp"
	        	android:textColor="#15428B"
	        	android:longClickable="true">
	        	</TextView>
	        
		</LinearLayout>
	        
    </ScrollView>
    
</LinearLayout>

</FrameLayout>
